--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "lessc site/public/app.less site/public/app.css"
   },
   "keywords": [],
   "author": "Tal Weinfeld",
@@ -20,5 +21,8 @@
     "lodash": "^4.17.11",
     "request": "^2.88.0",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "less": "^3.9.0"
   }
 }
